--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "anychart": "^8.11.1",
     "express": "^4.18.2",
+    "mysql2": "^3.6.5",
     "node": "^20.9.0"
-  }
+  },
+
+  "type": "module"
 }
