--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "anychart": "^8.11.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
-    "node": "^20.9.0"
+    "node": "^20.10.0",
+    "openai": "^4.20.1"
   }
 }
